<resources>
    <string name="app_name">VExchange</string>
    <string name="email">Enter your email ID</string>
    <string name="password">Enter your password</string>
    <string name="don_t_have_account_sign_up">Don\'t have account? Sign Up</string>
    <string name="login">Login</string>
    <string name="my_profile">Profile</string>
    <string name="sell">Sell</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="rate">Rate us</string>
    <string name="juggler">Welcome to VExchange</string>"
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close navigation Drawer</string>
    <string name="coming_soon">Coming Soon..</string>
    <string name="home">Home</string>
    <string name="product_name">Product name</string>
    <string name="feedback">Feedback</string>
    <string name="Welcome_to_Juggler">Welcome to VExchange</string>
    <string name="intro">A platform for students to buy and sell old goods to other students within the college.</string>
    <string name="our_team">Our Team</string>
    <string name="k">ABHINAV YALAMADDI \nHARSHA VARDHAN ELLURU</string>
    <string name="forgot_pass">Forgot password? Reset</string>
    <string name="go_back">Go Back</string>
    <string name="reset_pass">Reset Password</string>
</resources>
